Add github URL to manifest

--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
     "manifest_version": 2,
     "name": "9nsfw",
     "version": "1.0",
+    "homepage_url": "https://github.com/jelohe/9nsfw",
 
     "description": "Activate this plugin to view all 9gag nsfw images without logging in. You will view the nsfw posts directly in 9gag, as opposed to some plugins which just opens the image in a new tab.",
 
